--- a/frontend/templates/base.html
+++ b/frontend/templates/base.html
@@ -26,7 +26,7 @@
       </div>
     </nav>
     <main class="page">
-      <div class="container">
+      <div class="container {% block container_class %}{% endblock %}">
         {% block content %}{% endblock %}
       </div>
     </main>
